--- a/task-05/index.html
+++ b/task-05/index.html
@@ -70,7 +70,7 @@
    position: absolute;
    top: 80%;
    left: 50%;
-   transform: translate(-50%, -50%) scale(1.5); /* Adjust the scale value as needed */
+   transform: translate(-50%, -50%) scale(1.5); 
    margin-top: -25px;
    margin-bottom: 235px;
   }
