--- a/task-05/shop.html
+++ b/task-05/shop.html
@@ -76,11 +76,11 @@
         }
 
         .product-card img {
-            width: 80%; /* Make image fill the width of the card */
+            width: 80%; /* for making image fill the width of the card */
             height:50%;
-            object-fit: contain; /* Maintain aspect ratio and cover the card */
+            object-fit: contain; 
             display: block;
-            margin: auto; /* Center the image */
+            margin: auto; /* for centering the image */
         }
 
 
@@ -94,14 +94,14 @@
         }
 
         .product-card img.weirdy{
-            object-fit: contain; /* This value maintains aspect ratio while covering the container */
+            object-fit: contain; /* for maintaining aspect ratio */
             width: 80%;
             height: 50%;
         }
 
         .product-card:hover {
             border-bottom: 15px solid #3345AB; /* Change border color on hover */
-            transform: translateY(-5px); /* Add a slight upward translation on hover */
+            transform: translateY(-5px); /* Added a slight upward translation on hover */
         }
 
     </style>
@@ -118,7 +118,6 @@
     </div>
 
     <div class="product-container">
-        <!-- Repeat the product-card block below for each product -->
 
         <!-- Product 1 -->
         <div class="product-card">
